# swap-discord-tipbot

./: .gitmodules  CMakeLists.txt  README.md
example_config/: config.json
src/: bot.cpp  bot.h  config.cpp  config.h  main.cpp  walletapi.cpp  walletapi.h
